--- a/resume.tex
+++ b/resume.tex
@@ -1,36 +1,31 @@
+% !TeX program = xelatex
 \documentclass[11pt,a4paper]{article}
+\usepackage{graphicx} % Required for inserting images
 \usepackage[margin=1in]{geometry}
 \usepackage{enumitem}
 \usepackage{titlesec}
 \usepackage{hyperref}
-\usepackage{fontspec}
 \usepackage{setspace}
 \usepackage{parskip}
 \usepackage{ragged2e}
 
-% Font (you can switch to Times or another serif font if Georgia isn't available)
-\setmainfont{Georgia}
-
-% No section numbers
-\titleformat{\section}{\large\bfseries}{}{0em}{}[\titlerule]
-
 \begin{document}
 
 % Centered Name
+
 \begin{center}
-    {\LARGE \textbf{Moffat Kagiri Ngugi}}\\[0.5em]
-    0740-294-373 \quad | \quad \href{mailto:kagirimoffat@outlook.com}{kagirimoffat@outlook.com} \quad | \quad
-    \href{https://www.linkedin.com/in/moffatkagiri/}{LinkedIn} \quad | \quad
-    \href{https://github.com/moffat-kagiri}{GitHub}
+\textbf{\huge{Moffat Kagiri Ngugi}} \\[0.8em]
+    0740-294-373 \quad | \quad \href{mailto:kagirimoffat@outlook.com} {kagirimoffat@outlook.com} \quad | \quad\href{https://www.linkedin.com/in/moffatkagiri/}{LinkedIn} \quad | \quad \href{https://github.com/moffat-kagiri}{GitHub}
+    
 \end{center}
 
 \section*{Education}
 \justifying
 \textbf{University of East London} — London, UK \\
-\textit{Master of Science in Data Science} \hfill Mar. 2022 – Present
+\textit{Master of Science in Data Science} \hfill In progress
 
 \textbf{Daystar University} — Nairobi, KE \\
-\textit{Bachelor of Science in Actuarial Science} \hfill Aug. 2017 – Nov. 2021
+\textit{Bachelor of Science in Actuarial Science} \hfill 2021
 
 \section*{Experience}
 \textbf{Liberty \& Heritage Insurance} — Nairobi, KE \\
@@ -40,11 +35,11 @@
     \item Conducted data-driven policy analysis and automated renewal workflows using actuarial principles and claims experience metrics.
     \item Applied statistical insights and loss ratio analysis to support underwriting decisions and pricing strategy.
     \item Collaborated with cross-functional teams to integrate actuarial feedback into product design, marketing, and distribution strategy.
-    \item Contributed to public-sector tender preparation through technical documentation, compliance analysis, and stakeholder engagement.
+    \item Contributed to the preparation of public sector tenders through technical documentation, compliance analysis, and stakeholder engagement.
 \end{itemize}
 
 \textbf{Gauss Analytics} — Nairobi, KE \\
-\textit{Founder \& Lead Data Scientist} \hfill Jan 2025 – Present
+\textit{Founder \& Lead Data Scientist} \hfill Jan 2025 - Present
 \begin{itemize}[leftmargin=*]
     \item Founded a data analytics and financial insight firm serving SMEs, NGOs, and professional service firms.
     \item Designed and implemented tiered analytics solutions: Foundational Analytics, Advanced Analytics \& Architecture, and Embedded DSaaS.
@@ -70,7 +65,7 @@
 
 \section*{Projects}
 \textbf{Fedha Tracker App} — Android (Java/Kotlin), Python, SQL, Google APIs, Git \\
-\textit{Dec 2024 – Feb 2025}
+\textit{Jan 2025 – July 2025}
 \begin{itemize}[leftmargin=*]
     \item Designed and developed an Android-based financial tracker app for freelancers and SMEs with real-time expense tracking and financial optimization.
     \item Architected a mobile app with analytics for budgeting, report generation, and actionable insights.
@@ -86,7 +81,7 @@
 \end{itemize}
 
 \textbf{OCR Extraction Tool} — Python, Tesseract OCR, pdf2image, OpenCV \\
-\textit{Mar 2025 – Present}
+\textit{Feb 2025 – June 2025}
 \begin{itemize}[leftmargin=*]
     \item Built a tool to extract text from scanned documents including secure PDFs with tables.
     \item Created a reproducible Conda environment and automated reporting pipelines.
