--- a/resume.tex
+++ b/resume.tex
@@ -27,26 +27,16 @@
 \textbf{Daystar University} — Nairobi, KE \\
 \textit{Bachelor of Science in Actuarial Science} \hfill 2021
 
+
 \section*{Experience}
 \textbf{Liberty \& Heritage Insurance} — Nairobi, KE \\
 \textit{Actuarial Graduate Trainee} \hfill Apr 2025 – Present
 \begin{itemize}[leftmargin=*]
-    \item Developed interactive dashboards (Power BI, Excel) for business acquisition tracking, improving decision-making across sales and underwriting teams.
+    \item Developed interactive dashboards (Power BI, Excel) for business acquisition tracking, improving decision-making across sales, operations (pensions, underwriting, claims), and risk & compliance teams.
     \item Conducted data-driven policy analysis and automated renewal workflows using actuarial principles and claims experience metrics.
     \item Applied statistical insights and loss ratio analysis to support underwriting decisions and pricing strategy.
     \item Collaborated with cross-functional teams to integrate actuarial feedback into product design, marketing, and distribution strategy.
     \item Contributed to the preparation of public sector tenders through technical documentation, compliance analysis, and stakeholder engagement.
-\end{itemize}
-
-\textbf{Gauss Analytics} — Nairobi, KE \\
-\textit{Founder \& Lead Data Scientist} \hfill Jan 2025 - Present
-\begin{itemize}[leftmargin=*]
-    \item Founded a data analytics and financial insight firm serving SMEs, NGOs, and professional service firms.
-    \item Designed and implemented tiered analytics solutions: Foundational Analytics, Advanced Analytics \& Architecture, and Embedded DSaaS.
-    \item Built custom data pipelines, automated reporting systems, and interactive dashboards to improve decision speed and financial visibility.
-    \item Developed \textbf{Fedha}, an SME-focused financial app with tools for tax calculations, invoicing, and compliance.
-    \item Secured initial client engagements in legal and social enterprise sectors, delivering measurable improvements in reporting efficiency and operational clarity.
-    \item Driving strategic growth roadmap: pricing models, data governance frameworks, and regional expansion.
 \end{itemize}
 
 \textbf{KCB Bank Kenya} — Nanyuki, KE \\
@@ -64,13 +54,13 @@
 \end{itemize}
 
 \section*{Projects}
-\textbf{Fedha Tracker App} — Android (Java/Kotlin), Python, SQL, Google APIs, Git \\
-\textit{Jan 2025 – July 2025}
+\textbf{Fedha Personal Finance App} — Android (Java/Kotlin), Python, SQL, Google APIs, Git \\
+\textit{Jan 2025 – Jul 2025}
 \begin{itemize}[leftmargin=*]
-    \item Designed and developed an Android-based financial tracker app for freelancers and SMEs with real-time expense tracking and financial optimization.
-    \item Architected a mobile app with analytics for budgeting, report generation, and actionable insights.
-    \item Implemented iterative development and user feedback integration.
-    \item Built a scalable roadmap for a B2B SaaS platform.
+    \item Architected an Android-based app, aimed at empowering people and MSMEs with real-time expense tracking and financial planning
+    \item Designed and developed a user-friendly mobile application that integrates data analytics for automated tracking, statement generation, investment appraisal, loan amortization, and actionable insights
+    \item Implemented iterative development processes, ensuring rapid prototyping and continuous improvement based on user feedback
+    \item Established a scalable foundation with a roadmap for a future B2B SaaS web platform, enhancing financial decision-making capabilities
 \end{itemize}
 
 \textbf{Predictive Analytics} — Python, Random Forests, R, R Studio, R Markdown \\
@@ -88,6 +78,7 @@
 \end{itemize}
 
 \section*{Technical Skills}
+\textbf{Actuarial & Analytical:} Risk Analysis & Reporting, Statistical Modeling, Pricing Analysis, Loss Ratio Analysis, Predictive Modeling, Data Visualization
 \textbf{Languages:} Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R, Java \\
 \textbf{Frameworks:} React, Flutter, Node.js, Flask, Material-UI, FastAPI, Django \\
 \textbf{Developer Tools:} Git, Jupyter Notebooks, Docker, GCP, VS Code, PyCharm, IntelliJ, Eclipse \\
