Update CV. Tex and pdf are succinct and omit Gauss Analytics, as it is taking a back seat to actuarial work and data studies.

--- a/resume.tex
+++ b/resume.tex
@@ -15,12 +15,15 @@
 
 \begin{center}
 \textbf{\huge{Moffat Kagiri Ngugi}} \\[0.8em]
-    0740-294-373 \quad | \quad \href{mailto:kagirimoffat@outlook.com} {kagirimoffat@outlook.com} \quad | \quad\href{https://www.linkedin.com/in/moffatkagiri/}{LinkedIn} \quad | \quad \href{https://github.com/moffat-kagiri}{GitHub}
+    0740-294-373 \quad | \quad  \href{mailto:kagirimoffat@outlook.com} {kagirimoffat@outlook.com} \quad | \quad\href{https://www.linkedin.com/in/moffatkagiri/}{LinkedIn} \quad | \quad \href{https://github.com/moffat-kagiri}{GitHub}
     
 \end{center}
 
 \section*{Education}
 \justifying
+\textbf{Society of Actuaries} \\
+\textit{Pathway to Associate of the Society of Actuaries} \hfill In progress
+
 \textbf{University of East London} — London, UK \\
 \textit{Master of Science in Data Science} \hfill In progress
 
@@ -32,7 +35,7 @@
 \textbf{Liberty \& Heritage Insurance} — Nairobi, KE \\
 \textit{Actuarial Graduate Trainee} \hfill Apr 2025 – Present
 \begin{itemize}[leftmargin=*]
-    \item Developed interactive dashboards (Power BI, Excel) for business acquisition tracking, improving decision-making across sales, operations (pensions, underwriting, claims), and risk & compliance teams.
+    \item Developed interactive dashboards (Power BI, Excel) for business acquisition tracking, improving decision-making across sales, operations (pensions, underwriting, claims), and risk \& compliance teams.
     \item Conducted data-driven policy analysis and automated renewal workflows using actuarial principles and claims experience metrics.
     \item Applied statistical insights and loss ratio analysis to support underwriting decisions and pricing strategy.
     \item Collaborated with cross-functional teams to integrate actuarial feedback into product design, marketing, and distribution strategy.
@@ -52,6 +55,8 @@
 \begin{itemize}[leftmargin=*]
     \item Interned at the brokerage to learn various investment banking operations including compliance to NSE and CMA regulations, investor relations, and securities trading.
 \end{itemize}
+
+\newpage
 
 \section*{Projects}
 \textbf{Fedha Personal Finance App} — Android (Java/Kotlin), Python, SQL, Google APIs, Git \\
@@ -78,10 +83,11 @@
 \end{itemize}
 
 \section*{Technical Skills}
-\textbf{Actuarial & Analytical:} Risk Analysis & Reporting, Statistical Modeling, Pricing Analysis, Loss Ratio Analysis, Predictive Modeling, Data Visualization
+\textbf{Actuarial \& Analytical:} Risk Analysis \& Reporting, Statistical Modeling, Pricing Analysis, Loss Ratio Analysis, Predictive Modeling, Data Visualization \\
 \textbf{Languages:} Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R, Java \\
 \textbf{Frameworks:} React, Flutter, Node.js, Flask, Material-UI, FastAPI, Django \\
 \textbf{Developer Tools:} Git, Jupyter Notebooks, Docker, GCP, VS Code, PyCharm, IntelliJ, Eclipse \\
-\textbf{Libraries:} pandas, NumPy, Matplotlib
-
+\textbf{Libraries:} pandas, NumPy, Matplotlib, Scikit-learn, TensorFlow, OpenCV, Tesseract OCR \\
+\textbf{Databases:} PostgreSQL, SQLite, Firebase, Firestore \\
+\textbf{Other Tools:} Excel (Advanced), Power BI, Tableau, LaTeX
 \end{document}
