Revise skills section in resume.tex
Updated technical skills section to focus on actuarial and financial analysis, and removed programming languages and tools.

--- a/resume.tex
+++ b/resume.tex
@@ -116,13 +116,11 @@ In Progress
 \end{itemize}
 
 % Technical Skills
-\section*{Technical Skills}
-\textbf{Actuarial \& Analytical:} Risk Analysis \& Reporting, Statistical Modeling, Pricing Analysis, Loss Ratio Analysis, Predictive Modeling, Data Visualization \\
-\textbf{Languages:} Python, C/C++, SQL (Postgres), JavaScript, HTML/CSS, R, Java \\
-\textbf{Frameworks:} React, Flutter, Node.js, Flask, Material-UI, FastAPI, Django \\
-\textbf{Developer Tools:} Git, Jupyter Notebooks, Docker, GCP, VS Code, PyCharm, IntelliJ, Eclipse \\
-\textbf{Libraries:} pandas, NumPy, Matplotlib, Scikit-learn, TensorFlow, OpenCV, Tesseract OCR \\
-\textbf{Databases:} PostgreSQL, SQLite, Firebase, Firestore \\
-\textbf{Other Tools:} Excel (Advanced), Power BI, Tableau, LaTeX
+\section*{Skills}
+\textbf{Actuarial \& Insurance Analysis:} Experience analysis (mortality, lapse, claims), loss ratio analysis, pricing and underwriting support, A\/E analysis, portfolio monitoring, risk reporting \\
+\textbf{Financial \& Commercial Analysis:} Portfolio mix and movement analysis, balance sheet awareness, performance-linked KPI analysis, public sector tender analysis \\
+\textbf{Data \& Analytical Tools:} R, Python, SQL, Excel (Advanced), Power BI \\
+\textbf{Working Environment:} Cross-functional collaboration in regulated financial institutions, documentation and audit-ready reporting, Agile principles 
+
 
 \end{document}
